# servicoscrc

./: .env  .gitignore  README.md  pyproject.toml  pythonanywhere_wsgi.py  requirements.txt  rules  run.py  start.sh  test_anon.py
changelogs/: 2026-04-08.md  2026-04-09.md  2026-04-10.md  2026-04-11.md  2026-04-12.md  2026-04-14.md  2026-04-16.md  2026-04-20.md
documentacao/: DEPLOYMENT.md  contract_analysis_product_report.md  mapa_hierarquico.md  mapa_hierarquico_v2_com_comentarios.md  relatorio_profundo_jira.md  tarefas_concluidas.md  tarefas_em_andamento.md  tarefas_pendentes.md
frontend/: analisecontrato.html  analiseformulario.html  index.html  organizadorservicos.html  padronizacao.html  resultadocontrato.html  script.js  styles.css
refs/: CRM_Backup_Jira.xlsx  Mail_SMAC.md  Pasted Text.txt  PlanilhaConsolidada.xlsx  PlanilhaGerada.xlsx  RESUMO_CLF.md  RESUMO_DEFESA_CIVIL.md  RESUMO_GM.md  Revisão de formulário de solicitação de serviços GM - 2026_04_17 13_59 GMT-03_00 - Anotações do Gemini.md  Revisão dos formulários - CLF - 2026_04_16 15_17 GMT-03_00 - Anotações do Gemini.md  Revisão dos formulários - Defesa Civil - 2026_04_16 16_12 GMT-03_00 - Anotações do Gemini.md  irregular_veiculo.html  wireframe_meio_ambiente.html  wireframe_sossego.html
scratch/: analisecontrato_dev.html  analyze_pdf_sample.py  anonymizer_dev.py  app_dev.py  audit_hours.py  full_pdf_text.txt  generate_deep_excel_report.py  generate_deep_jira_report.py  inspect_excel.py  inspect_excel_v2.py  inspect_mapping.py  jira_cards_full.json  jira_deep_data.json  jira_full_data.json  jira_hierarchical_data.json  jira_raw_issues.json  (+15 more)
(+233 files in other folders)
