[project]
name = "servicoscrc"
version = "0.1.0"
description = "App Lúdico para Serviços CRC"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "google-generativeai>=0.8.6",
    "openpyxl>=3.1.0",
    "pydantic>=2.0.0",
    "pypdf>=6.9.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.24",
    "uvicorn>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
